PROJECT(epollsocket)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -fopenmp -O0 -Wall -g -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -fopenmp -O3 -Wall")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_LIBRARY(epollsocket SHARED ${DIR_SRCS})
TARGET_LINK_LIBRARIES(epollsocket pthread)